--- a/hisac-web/src/main/webapp/WEB-INF/i18n/message.properties
+++ b/hisac-web/src/main/webapp/WEB-INF/i18n/message.properties
@@ -1,5 +1,5 @@
 ### 全域
-globalSiteName=衛生福利部｜資安資訊分享與分析中心
+globalSiteName=科技部｜資安資訊分享與分析中心
 globalCopyright=Ministry of Health and Welfare<br />衛生福利部版權所有
 globalOptimalWindowSize=最佳瀏覽解析度 1280x1024
 globalFooterDirectedBy=指導單位
